<resources>
    <string name="app_name">RestaurantInspector</string>
    <string name="second_screen">Second screen</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="gps_coords">GPS coords:</string>
    <string name="critical_issues_found">critical issues found</string>
    <string name="non_critical_issues_found">non-critical issues found</string>
    <string name="address_city">%1$s, %2$s</string>
    <string name="latitude_longitude">GPS (%1$f, %2$f)</string>
    <string name="number_critical_issues">%1$d critical issues found</string>
    <string name="number_non_critical_issues">%1$d non-critical issues found</string>
    <string name="date">date</string>
    <string name="total_issues">Issues: %1$d</string>
    <string name="current_restaurant_date">%1$s</string>
    <string name="no_inspections">There are no inspections yet</string>
    <string name="empty_string" />
    <string name="issues">Issues:</string>
    <string name="days_ago">Days Ago:</string>
    <string name="number_of_critical">%1$d</string>
    <string name="number_of_non_critical">%1$d</string>
    <string name="hazard_rating">%1$s</string>
    <string name="violation_id">%1$d</string>
    <string name="brief_desc">%1$s</string>
    <string name="inspection_type">%1$s</string>
    <string name="hazard_rating_view">Hazard Rating: </string>
    <string name="inspection_date_view">Inspection Date: </string>
    <string name="inspection_type_view">Inspection Type: </string>
    <string name="num_critical_issues_view">Number of Critical Issues Found: </string>
    <string name="num_non_critical_issues_view">Number of Non-Critical Issues Found: </string>
    <string name="list_of_restaurants">List of Restaurants</string>
    <string name="title_activity_maps">Map</string>
    <string name="restaurant_name_on_map">%1$s</string>
    <string name="my_location_title">My Location</string>
    <string name="snippet">%1$s</string>
    <string name="map">Map</string>
    <string name="restaurants">Restaurants</string>
    <string name="days_ago_for_date">days ago</string>
    <string name="restaurant_address_popup">Address: %1$s</string>
    <string name="hazard_level_popup">Hazard level: %1$s</string>
    <string name="no_inspection_happened">No inspections happened in this restaurant</string>
    <string name="filter_hazard_low">Low Hazard Level</string>
    <string name="filter_hazard_moderate">Moderate Hazard Level</string>
    <string name="filter_hazard_high">High Hazard Level</string>
    <string name="filter_favorites">Favorites</string>
    <string name="search_view">searchView</string>
    <string name="options">Options</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="new_update_available">New update available!</string>
    <string name="update_message">An update is available to download. Downloading will update
        restaurants and inspections to the latest data available from the City of Surrey.</string>
    <string name="dismiss">Dismiss</string>
    <string name="new_inspections">New inspections!</string>
    <string name="fav_inspections">
        New inspections are available for your favourite restaurants:</string>
    <string name="option_title">Options</string>
    <string name="hint">Critical Issues Less than: N</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="search_hint">Search here!</string>
    <string name="title_for_map_of_restaurant">Map of Restaurants</string>
    <string name="done">Done</string>

    <string name="violation_101">Building regulations not followed</string>
    <string name="violation_102">Unapproved food premise</string>
    <string name="violation_103">No valid permit to operate</string>
    <string name="violation_104">No visible permit</string>
    <string name="violation_201">Food contamination</string>
    <string name="violation_202">Unsafe food</string>
    <string name="violation_203">Cooling violation</string>
    <string name="violation_204">Cooking/Heating violation</string>
    <string name="violation_205">Cold hazardous food</string>
    <string name="violation_206">Hot hazardous food</string>
    <string name="violation_208">Unapproved food sources</string>
    <string name="violation_209">Unprotected food</string>
    <string name="violation_210">Unacceptable thawing</string>
    <string name="violation_211">Frozen hazardous food</string>
    <string name="violation_212">Unapproved handling procedures</string>
    <string name="violation_301">Unsanitary conditions</string>
    <string name="violation_302">Unsanitized equipment</string>
    <string name="violation_303">Unsanitary water</string>
    <string name="violation_304">Not free of pests</string>
    <string name="violation_305">Open to pests</string>
    <string name="violation_306">Unsanitary food premises</string>
    <string name="violation_307">Unsuitable equipment</string>
    <string name="violation_308">Equipment in bad working condition</string>
    <string name="violation_309">Improper storage of chemicals</string>
    <string name="violation_310">One-time containers used frequently</string>
    <string name="violation_311">Premises not maintained</string>
    <string name="violation_312">Unrelated item storage</string>
    <string name="violation_313">Live animal on premise</string>
    <string name="violation_314">Unacceptable sanitation procedures</string>
    <string name="violation_315">Inaccurate refrigerator thermometers</string>
    <string name="violation_401">Inadequate hand washing station</string>
    <string name="violation_402">Employee hand washing violation</string>
    <string name="violation_403">Employee hygiene violation</string>
    <string name="violation_404">Employee smoking on premises</string>
    <string name="violation_501">Operator has inadequate certification</string>
    <string name="violation_502">Staff has inadequate certification</string>


</resources>
