<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".GoogleMaps.GoogleMapActivity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/button_cancel"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0"
        android:background="@color/cardview_light_background"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:layout_weight="3"
        android:elevation="7dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/button_update"
        app:layout_constraintEnd_toEndOf="@+id/button_update"
        app:layout_constraintStart_toStartOf="@+id/button_update"
        app:layout_constraintTop_toTopOf="@+id/button_update"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/update_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="64dp"
        android:text="@string/update_message"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_title"

        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/new_update_available"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/BLACK"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>