<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/screen2_hazard_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:adjustViewBounds="true"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        app:srcCompat="@drawable/green_acceptance_sign_icon" />

    <TextView
        android:id="@+id/screen2_critical_issue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/screen2_hazard_sign"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="-41dp"
        android:layout_marginRight="-41dp"
        android:layout_marginBottom="43dp"
        android:layout_toStartOf="@+id/screen2_inspection_date"
        android:layout_toLeftOf="@+id/screen2_inspection_date"
        android:text="@string/critical_issues_found"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/screen2_non_critical_issue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="46dp"
        android:layout_toEndOf="@+id/screen2_hazard_sign"
        android:layout_toRightOf="@+id/screen2_hazard_sign"
        android:text="@string/non_critical_issues_found"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/screen2_inspection_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/date"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

</RelativeLayout>
